tests/compile_fail/three_required.stderr
error: Must specify values for non-defaulted arguments: [a, b, c]
 --> $DIR/three_required.rs:3:1
  |
3 | #[named]
  | ^^^^^^^^
...
9 |     let _ = foo!();
  |             ------ in this macro invocation
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
